# testing-thursday

./: Cargo.toml  README.md
src/: main.rs
static/: fix_title.js
templates/: index.html.tera
