[package]
name = "testing-thursday"
version = "0.1.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.8.11"
rocket = "0.4.7"
dotenv = "0.15.0"
serde = { version = "1.0.124", features = ["derive"] }
rocket_contrib = { version = "0.4.7", default_features = false, features = ["tera_templates"] }